# asteroids

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt  TODO.txt  asteoriden.cbp  asteoriden.sln  asteoriden.vcxproj  asteroids.sln  asteroids.vcxproj  config.cfg
cmake/Modules/: FindThor.cmake
include/: Asteroid.hpp  AsteroidMedium.hpp  Button.hpp  ButtonManager.hpp  ConvexPolygon.hpp  DebrisChunk.hpp  EnergyBullet.hpp  Entity.hpp  EntityManager.hpp  EntityTypes.hpp  Game.hpp  GameOver.hpp  GameOverNewHighscore.hpp  Gamestate.hpp  GamestateManager.hpp  HUD.hpp  Highscore.hpp  HighscoreView.hpp  MainMenu.hpp  ManagedButton.hpp  MessageReceiver.hpp  MessageSystem.hpp  Messages.hpp  Point.hpp  Singleplayer.hpp  SingleplayerGame.hpp  SoundService.hpp  Spaceship.hpp  Vector.hpp  config.h.in  utility.hpp
res/: asteroid.col  asteroidMedium.col  asteroidSmall.col  bullet1.col  ship.col
resDev/: background.xcf  gameOverBackground.xcf  menuBackground.xcf
src/: Asteroid.cpp  AsteroidMedium.cpp  Button.cpp  ButtonManager.cpp  DebrisChunk.cpp  EnergyBullet.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  GameOver.cpp  GameOverNewHighscore.cpp  GamestateManager.cpp  HUD.cpp  Highscore.cpp  HighscoreView.cpp  MainMenu.cpp  ManagedButton.cpp  MessageSystem.cpp  Singleplayer.cpp  SingleplayerGame.cpp  SoundService.cpp  Spaceship.cpp  Vector.cpp  main.cpp  utility.cpp
